# SyMaDemo_android

./: build.gradle  gradle.properties  local.properties  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/release/: output.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Buffer.h  Convert.cpp  Convert.h  Defines.h  FFMpegPlayerCore.cpp  FFMpegPlayerCore.h  FFmpegMusic.cpp  FFmpegMusic.h  FFmpegVideo.cpp  FFmpegVideo.h  GP4225_FileStruct.h  GetVideoThumbnail.cpp  JH_GetPics.cpp  JH_GetPics.h  JH_TestInfo.cpp  JH_TestInfo.h  JPEG_BUFFER.cpp  JPEG_BUFFER.h  MyDownLoad_GKA.cpp  MyDownLoad_GKA.h  MyFrame.cpp  MyFrame.h  MyMaskImg.cpp  MyMaskImg.h  MyMediaCoder.cpp  MyMediaCoder.h  MyMp4.cpp  MyMp4.h  MyPlayer.cpp  MyPlayer.h  MyRevBuffer.cpp  MyRevBuffer.h  MySocketData.cpp  MySocketData.h  MySocket_GKA.cpp  MySocket_GKA.h  MySonix.cpp  MySonix.h  OnLinePlayer.cpp  OnLinePlayer.h  (+13 more)
app/src/main/cpp/GL/: CameraOpenGLES.c  cameraShader.c  cameraShader.h
app/src/main/cpp/GL/opengles/: esUtil.c  esUtil.h  matrix.c  matrix.h
app/src/main/cpp/mp4v2-2.0.0/include/mp4v2/: chapter.h  file.h  general.h  isma.h  itmf_generic.h  itmf_tags.h  sample.h  streaming.h  track.h  track_prop.h
app/src/main/java/com/joyhonest/symademo/: MyApp.java  SplashActivity.java
app/src/main/res/layout/: activity_splash.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
jh_ui/: build.gradle  proguard-rules.pro
jh_ui/src/main/: AndroidManifest.xml
jh_ui/src/main/assets/: mydata.txt
jh_ui/src/main/java/com/joyhonest/jh_fly/: BrowFilesFragment.java  BrowSelectFragment.java  FlyPathFragment.java  FlyPlayFragment.java  Fly_PlayActivity.java  JH_Fly_Setting.java  MyButMapping.java  MySwitch.java  SwitchMesage.java
jh_ui/src/main/java/com/joyhonest/jh_ui/: Command.java  DispPhoto_Fragment.java  DispVideo_Fragment.java  JH_App.java  MyAdapter.java  MyControl.java  MyControl_A.java  MyFilesItem.java  MyGrid_Fragment.java  MyItemData.java  MyRipple.java  Path_Fragment.java  PermissionAsker.java  PlayActivity.java  RequestWifi_Interface.java  Select_Video_Photo_Fragment.java  Storage.java  TestActivity.java  main_fragment.java
jh_ui/src/main/java/com/joyhonest/test/: JH_PicListView.java  MyTestActivity.java
jh_ui/src/main/java/com/joyhonest/wifination/: AudioCodec.java  AudioEncoder.java  GP4225_Device.java  wifination.java
jh_ui/src/main/res/animator/: slide_left_out.xml  slide_right_in.xml
jh_ui/src/main/res/drawable/: po_seekbar_jh.xml  progress_a_jh.xml  progress_jh.xml  round_back_jh.xml  round_back_select_jh.xml  select_back_fly_jh.xml
jh_ui/src/main/res/layout/: activity_fly_play_jh.xml  activity_map_test.xml  activity_my_test.xml  activity_play_jh.xml  activity_test.xml  fragment_brow_files.xml  fragment_brow_select.xml  fragment_disp_photo_jh.xml  fragment_disp_video_jh.xml  fragment_fly_path.xml  fragment_fly_play_jh.xml  fragment_main_fragment_jh.xml  fragment_my_grid_jh.xml  fragment_path.xml  fragment_select_video_photo_jh.xml  list_item_fly_jh.xml  list_item_jh.xml
jh_ui/src/main/res/mipmap-xhdpi/: seekbar_thumb_jh.xml
jh_ui/src/main/res/values/: strings.xml  styles_jh.xml
